--- a/index.html
+++ b/index.html
@@ -28,13 +28,24 @@
    <div class="container-fluid">
     <div class="row">
         <div class="col-4">This is were the search bar will go
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+            <div class="row"></div>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
               </div>
+            <div class="row">
+                <button type="button" class="btn btn-light">Light</button><br>
+                <button type="button" class="btn btn-light">Light</button><br>
+                <button type="button" class="btn btn-light">Light</button><br>
+                <button type="button" class="btn btn-light">Light</button><br>
+                <button type="button" class="btn btn-light">Light</button><br>
+            </div>
               
         </div>
-        <div class="col-8">This is where the weather will be displayed</div>
+        <div class="col-8">
+            <div class="row" id="today">This will display Today's weather</div>
+            <div class="row"id = "fiveDay">This will display The next five weeks weathers</div>
+        </div>
     </div>
 
 
