--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <nav class="navbar bg-light">
         <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1">Navbar</span>
+          <span class="navbar-brand mb-0 h1">weather</span>
         </div>
       </nav>
     
@@ -51,5 +51,6 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  <script src ="assets/script.js/script.js"></script>
 </body>
 </html>
