--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="row"></div>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+                    <button class="btn btn-outline-secondary" type="button" id="search">Button</button>
               </div>
             <div class="row">
                 <button type="button" class="btn btn-light">Light</button><br>
