got longitude working on completing linking location data to getWeather function

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <div class="col-4">This is were the search bar will go
             <div class="row"></div>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button class="btn btn-outline-secondary" type="button" id="search">Button</button>
+                    <input type="text" class="form-control" id = "searchInput" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="searchBtn">Button</button>
               </div>
             <div class="row">
-                <button type="button" class="btn btn-light">Light</button><br>
-                <button type="button" class="btn btn-light">Light</button><br>
-                <button type="button" class="btn btn-light">Light</button><br>
+                <button type="button" class="btn btn-light" id = "nashvilleBtn">Nashville, TN</button><br>
+                <button type="button" class="btn btn-light" id = "newYorkBtn">New York, NY</button><br>
+                <button type="button" class="btn btn-light" id = "">Light</button><br>
                 <button type="button" class="btn btn-light">Light</button><br>
                 <button type="button" class="btn btn-light">Light</button><br>
             </div>
