can access API weather need to add display contnt alogrythm and click button feature

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div class="row">
                 <button type="button" class="btn btn-light" id = "nashvilleBtn">Nashville, TN</button><br>
                 <button type="button" class="btn btn-light" id = "newYorkBtn">New York, NY</button><br>
-                <button type="button" class="btn btn-light" id = "">Light</button><br>
-                <button type="button" class="btn btn-light">Light</button><br>
-                <button type="button" class="btn btn-light">Light</button><br>
+                <button type="button" class="btn btn-light" id = "lasVegasBtn">Las Vegas, NV</button><br>
+                <button type="button" class="btn btn-light" id = "chicagoBtn">Chicago, IL</button><br>
+                <button type="button" class="btn btn-light" id = "laBtn">Las Angeles, CA</button><br>
             </div>
               
         </div>
