pushing for frosemond

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         </div>
         <div class="col-8">
             <div class="row" id="today">This will display Today's weather</div>
+              <div class="row">This will be the current temperature</div>
+              <div class="row">This will be the </div>
             <div class="row"id = "fiveDay">This will display The next five weeks weathers</div>
         </div>
     </div>
