--- a/index.html
+++ b/index.html
@@ -44,9 +44,18 @@
         </div>
         <div class="col-8">
             <div class="row" id="today">This will display Today's weather</div>
-              <div class="row">This will be the current temperature</div>
-              <div class="row">This will be the </div>
-            <div class="row"id = "fiveDay">This will display The next five weeks weathers</div>
+              <div class="row">This will display the city name</div>
+              <div class="row">The will display the weather</div>
+              <div class="row">This will siplay the humidity</div>
+              <div class="row">This will display the UV index</div>
+            <div class="row"id = "fiveDay">
+              <div class="col-2">Monday</div>
+              <div class="col-2">Tuesday</div>
+              <div class="col-2">Wednesday</div>
+              <div class="col-2">Thursday</div>
+              <div class="col-2">Friday</div>
+              <div class="col-2"></div>
+            </div>
         </div>
     </div>
 
