fetch should work; need to get button to work then add population of elements.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="col-4">This is were the search bar will go
             <div class="row"></div>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" id = "searchInput" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <input type="text" class="form-control" id = "searchInput" placeholder="Nashville" aria-label="Recipient's username" aria-describedby="button-addon2">
                     <button class="btn btn-outline-secondary" type="button" id="searchBtn">Button</button>
               </div>
             <div class="row">
