display of todays weather done; need to complete five day forcast annd button

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
               
         </div>
         <div class="col-8">
-            <div class="row" id="today">This will display Today's weather</div>
-              <div class="row">This will display the city name</div>
-              <div class="row">The will display the weather</div>
-              <div class="row">This will siplay the humidity</div>
-              <div class="row">This will display the UV index</div>
+            <div class="row" id="today">
+              <div class="row" id="cityName"></div>
+              <div class="row" id="tempToday">The will display the weather</div>
+              <div class="row" id="weatherToday">This will siplay the humidity</div>
+            </div>
             <div class="row"id = "fiveDay">
               <div class="col-2">Monday</div>
               <div class="col-2">Tuesday</div>
