--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
               <div class="row" id="weatherToday">This will siplay the humidity</div>
             </div>
             <div class="row"id = "fiveDay">
-              <div class="col-2">Monday</div>
-              <div class="col-2">Tuesday</div>
-              <div class="col-2">Wednesday</div>
-              <div class="col-2">Thursday</div>
-              <div class="col-2">Friday</div>
-              <div class="col-2"></div>
+              <div class="col" id = "dayOne">Monday</div>
+              <div class="col" id="dayTwo">Tuesday</div>
+              <div class="col" id = "dayThree">Wednesday</div>
+              <div class="col" id = "dayFour">Thursday</div>
+              <div class="col" id="dayFive">Friday</div>
             </div>
         </div>
     </div>
