cahnged HTML for more clear layout

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="col-4">This is were the search bar will go
             <div class="row"></div>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" id = "searchInput" placeholder="Nashville" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button class="btn btn-outline-secondary" type="button" id="searchBtn">Button</button>
+                    <input type="text" class="form-control" id = "searchInput" placeholder="Enter Location" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="searchBtn">Search</button>
               </div>
             <div class="row">
                 <button type="button" class="btn btn-light" id = "nashvilleBtn">Nashville, TN</button><br>
@@ -45,15 +45,15 @@
         <div class="col-8">
             <div class="row" id="today">
               <div class="row" id="cityName"></div>
-              <div class="row" id="tempToday">The will display the weather</div>
-              <div class="row" id="weatherToday">This will siplay the humidity</div>
+              <div class="row" id="tempToday">No data avaible, please enter a location.</div>
+              <div class="row" id="weatherToday"></div>
             </div>
             <div class="row"id = "fiveDay">
-              <div class="col" id = "dayOne">Monday</div>
-              <div class="col" id="dayTwo">Tuesday</div>
-              <div class="col" id = "dayThree">Wednesday</div>
-              <div class="col" id = "dayFour">Thursday</div>
-              <div class="col" id="dayFive">Friday</div>
+              <div class="col" id = "dayOne"></div>
+              <div class="col" id="dayTwo"></div>
+              <div class="col" id = "dayThree"></div>
+              <div class="col" id = "dayFour"></div>
+              <div class="col" id="dayFive"></div>
             </div>
         </div>
     </div>
