added more catergories, will finnish day five boxes tommorow

--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
         <div class="col-8">
             <div class="row" id="today">
               <div class="row" id="cityName"></div>
+              <div class="row" id="dateToday"></div>
+              <div class="row" id="iconToday"></div>
               <div class="row" id="tempToday">No data avaible, please enter a location.</div>
+              <div class="row" id="humidityToday"></div>
+              <div class="row" id ="speedToday"></div>
               <div class="row" id="weatherToday"></div>
             </div>
             <div class="row"id = "fiveDay">
