commented out for functionality

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
               <div class="row" id="weatherToday"></div>
             </div>
             <div class="row"id = "fiveDay">
-              <div class="col" id = "dayOne"></div>
+              <div class="col" id = "dayOne">
+                <div class="row" id=""></div>
+              </div>
               <div class="col" id="dayTwo"></div>
               <div class="col" id = "dayThree"></div>
               <div class="col" id = "dayFour"></div>
