added fiveDayForcast; need to wrap text within conatainer looking at bootstrap for answer

--- a/index.html
+++ b/index.html
@@ -53,13 +53,41 @@
               <div class="row" id="weatherToday"></div>
             </div>
             <div class="row"id = "fiveDay">
-              <div class="col" id = "dayOne">
-                <div class="row" id=""></div>
+              <div class="col-3" id = "dayOne">
+                <div class="row" id="dayOneDate"></div>
+                <div class="row" id ="dayOneIcon"></div>
+                <div class="row" id="dayOneTemp"></div>
+                <div class="row" id="dayOneSpeed"></div>
+                <div class="row" id="dayOneHum"></div>
               </div>
-              <div class="col" id="dayTwo"></div>
-              <div class="col" id = "dayThree"></div>
-              <div class="col" id = "dayFour"></div>
-              <div class="col" id="dayFive"></div>
+              <div class="col-2" id="dayTwo">
+                <div class="row" id="dayTwoDate"></div>
+                <div class="row" id ="dayTwoIcon"></div>
+                <div class="row" id="dayTwoTemp"></div>
+                <div class="row" id="dayTwoSpeed"></div>
+                <div class="row" id="dayTwoHum"></div>
+              </div>
+              <div class="col-2" id = "dayThree">
+                <div class="row" id="dayThreeDate"></div>
+                <div class="row" id ="dayThreeIcon"></div>
+                <div class="row" id="dayThreeTemp"></div>
+                <div class="row" id="dayThreeSpeed"></div>
+                <div class="row" id="dayThreeHum"></div>
+              </div>
+              <div class="col-2" id = "dayFour">
+                <div class="row" id="dayFourDate"></div>
+                <div class="row" id ="dayFourIcon"></div>
+                <div class="row" id="dayFourTemp"></div>
+                <div class="row" id="dayFourSpeed"></div>
+                <div class="row" id="dayFourHum"></div>
+              </div>
+              <div class="col-3" id="dayFive">
+                <div class="row" id="dayFiveDate"></div>
+                <div class="row" id ="dayFiveIcon"></div>
+                <div class="row" id="dayFiveTemp"></div>
+                <div class="row" id="dayFiveSpeed"></div>
+                <div class="row" id="dayFiveHum"></div>
+              </div>
             </div>
         </div>
     </div>
