--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
     
    <div class="container-fluid">
     <div class="row">
-        <div class="col-4">This is were the search bar will go
+      <!--This is the div containing the -->
+        <div class="col-4">
             <div class="row"></div>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" id = "searchInput" placeholder="Enter Location" aria-label="Recipient's username" aria-describedby="button-addon2">
                     <button class="btn btn-outline-secondary" type="button" id="searchBtn">Search</button>
               </div>
+              <!--This is the div containg the selected city buttons-->
             <div class="row">
                 <button type="button" class="btn btn-light" id = "nashvilleBtn">Nashville, TN</button><br>
                 <button type="button" class="btn btn-light" id = "newYorkBtn">New York, NY</button><br>
@@ -42,6 +44,7 @@
             </div>
               
         </div>
+        <!--This is the divs for the five day forecast-->
         <div class="col-8">
             <div class="row" id="today">
               <div class="row" id="cityName"></div>
